# Clip-your-arbitrary-polygons

./: CMakeLists.txt
src/: Polygon.cpp  Polygon.h  PolygonClipping.cpp  PolygonClipping.h  PolygonUtils.h  ProcessPolygon.h  glad.c  main.cpp
